[package]
name = "lpc176x5x-pac"
version = "0.1.0"
edition = "2024"

[dependencies]
critical-section = { version = "1.1", optional = true }
vcell = "0.1.3"
cortex-m = "0.7"
cortex-m-rt = { version = "0.7", optional = true }

[features]
rt = ["cortex-m-rt"]
critical-section = ["dep:critical-section"]
